--- a/git_intro.html
+++ b/git_intro.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h1 color:"red">Welcome</h1>
+    <h1 color:"blue">Welcome</h1>
     <h2>Heading No. 2</h2>
     Wassup
 </body>
